<resources>
    <string name="app_name">KSE test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="manufacturer">manufacturer:</string>
    <string name="transmission">transmission:</string>
    <string name="price">price:</string>
    <string name="no_cars_were_added_yet">No cars were added yet...</string>
    <string name="adding_car">Adding car...</string>
    <string name="add_photo">Add photo</string>
    <string name="model">Model</string>
    <string name="transmission_et">Transmission</string>
    <string name="manufacturer_et">Manufacturer</string>
    <string name="price_et">Price</string>
    <string name="done">Done!</string>
    <string name="year">Year</string>
    <string name="about_text">This application is intended exclusively for free use. \nCreated by Igor Sysenko specifically for the "KSE"</string>
    <string name="filter_by_manufacturer">Filter by manufacturer</string>
    <string name="search">Search</string>
    <string name="year_item">year:</string>
    <string name="contact_me">Contact me:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
